# wudju

./: .gitignore  LICENSE  config.example.json  done.txt  greeter.py  pyproject.toml  readme.adoc  test.py  todo_bak.txt  todo_test.txt  wudju.py
config/: config.py
quote/: quote.py
todotxt/: todotxt.py  todotxt_item.py
wudju/: wudju.py
wudju/config/: config.py
wudju/todotxt/: todotxt.py  todotxt_item.py
