[tool.poetry]
name = "wudju"
version = "0.1.0"
description = "A beautiful, minimalistic new tab page for your terminal. It includes a greeting, date and time, inspirational quotes and your current tasks (ToDo.txt-Support)."
authors = ["paddex <paddex@paddex.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
